# rascall-v4

./: BOOK_INTEGRATION.md  CMakeLists.txt  LICENSE  README.md
src/: bitboard.cpp  bitboard.h  board.cpp  board.h  book.cpp  book.h  eval.cpp  eval.h  gensfen.cpp  gensfen.h  main.cpp  movegen.cpp  movegen.h  rascall.rc  rl.cpp  rl.h  search.cpp  search.h  tt.h  types.h  uci.cpp  uci.h
